--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/83sGKvCv2T2CulYbd40Aeduc7n2.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Misión: Imposible - Sentencia mortal parte uno 2023</span>
-    <span class="hidden">Ethan Hunt y su equipo del FMI, se embarcan en su misión más peligrosa hasta la fecha: localizar, antes de que caiga en las manos equivocadas, una nueva y terrorífica arma que amenaza a toda la humanidad. En esta tesitura, y con unas fuerzas oscuras del pasado de Ethan acechando, comienza una carrera mortal alrededor del mundo en la que está en juego el control del futuro y el destino del planeta. Enfrentado a un enemigo misterioso y todopoderoso, Ethan se ve obligado a considerar que nada puede anteponerse a su misión, ni siquiera las vidas de aquellos que más le importan.</span>
+    <span class="hidden">mi m:i mi 7 Ethan Hunt y su equipo del FMI, se embarcan en su misión más peligrosa hasta la fecha: localizar, antes de que caiga en las manos equivocadas, una nueva y terrorífica arma que amenaza a toda la humanidad. En esta tesitura, y con unas fuerzas oscuras del pasado de Ethan acechando, comienza una carrera mortal alrededor del mundo en la que está en juego el control del futuro y el destino del planeta. Enfrentado a un enemigo misterioso y todopoderoso, Ethan se ve obligado a considerar que nada puede anteponerse a su misión, ni siquiera las vidas de aquellos que más le importan.</span>
   </a>
 </li>
 <!--FIN--><!-- Mision Imposible 6: Repercusion -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/cUlWqDLEYMN3OWlOZ0U18WcIw5F.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Misión Imposible 6: Repercusión 2018</span>
-    <span class="hidden">Ethan Hunt y su equipo del FMI, junto con algunos aliados conocidos, corren contrarreloj tras una misión que salió mal.</span>
+    <span class="hidden">mi m:i mi Ethan Hunt y su equipo del FMI, junto con algunos aliados conocidos, corren contrarreloj tras una misión que salió mal.</span>
   </a>
 </li>
 <!--FIN--><!-- Mision Imposible 5: Nacion Secreta -->
@@ -118,7 +118,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/q5twcJdIx9Swtl7CyzfvgQckWVK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Misión Imposible 5: Nación Secreta 2015</span>
-    <span class="hidden">Ethan y su equipo se enfrentan a su misión más imposible hasta el momento cuando tienen que erradicar una organización internacional de delincuentes tan hábil como ellos y comprometida con la destrucción del FMI.</span>
+    <span class="hidden">mi m:i mi Ethan y su equipo se enfrentan a su misión más imposible hasta el momento cuando tienen que erradicar una organización internacional de delincuentes tan hábil como ellos y comprometida con la destrucción del FMI.</span>
   </a>
 </li>
 <!--FIN--><!-- Mision Imposible 4: Protocolo fantasma -->
@@ -127,7 +127,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/y0hjsPyieqxcunEcAxb9mrrE09c.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Misión Imposible 4: Protocolo fantasma 2011</span>
-    <span class="hidden">El FMI es clausurado cuando está implicado en el atentado del Kremlin, lo que hace que Ethan Hunt y su nuevo equipo se vuelvan rebeldes para limpiar el nombre de su organización.</span>
+    <span class="hidden">mi m:i mi El FMI es clausurado cuando está implicado en el atentado del Kremlin, lo que hace que Ethan Hunt y su nuevo equipo se vuelvan rebeldes para limpiar el nombre de su organización.</span>
   </a>
 </li>
 <!--FIN--><!-- Mision: Imposible 3 -->
@@ -136,7 +136,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/w61xBgFOfP8Z6uHKIKn1sl1TI8j.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Misión: Imposible 3 2006</span>
-    <span class="hidden">El agente del FMI Ethan Hunt entra en conflicto con un peligroso y sádico traficante de armas que, en respuesta, amenaza su vida y la de su prometida.</span>
+    <span class="hidden">mi m:i mi El agente del FMI Ethan Hunt entra en conflicto con un peligroso y sádico traficante de armas que, en respuesta, amenaza su vida y la de su prometida.</span>
   </a>
 </li>
 <!--FIN--><!-- Mision: Imposible 2 -->
@@ -145,7 +145,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/mskE3W88cjMRrnKQye8pjmJu3O1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Misión: Imposible 2 2000</span>
-    <span class="hidden">El agente del FMI Ethan Hunt es enviado a Sydney para encontrar y destruir una enfermedad genéticamente modificada llamada «Quimera».</span>
+    <span class="hidden">mi m:i mi 2El agente del FMI Ethan Hunt es enviado a Sydney para encontrar y destruir una enfermedad genéticamente modificada llamada «Quimera».</span>
   </a>
 </li>
 <!--FIN--><!-- Mision: Imposible -->
@@ -154,7 +154,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/xCpmxw3UUjv4PGzbIPOHeoKAV0l.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Misión: Imposible 1996</span>
-    <span class="hidden">Un agente estadounidense, bajo la falsa sospecha de deslealtad, debe descubrir y exponer al verdadero espía sin la ayuda de su organización.</span>
+    <span class="hidden">1 mi m:i mi Un agente estadounidense, bajo la falsa sospecha de deslealtad, debe descubrir y exponer al verdadero espía sin la ayuda de su organización.</span>
   </a>
 </li>
 <!--FIN--><!-- El padel es nuestro -->
@@ -7455,17 +7455,7 @@ Es justamente aquí donde una familia de gánsteres irlandeses de origen nómada
     <span class="hidden">En un mundo cinico que ha perdido la fe en la bondad, Superman lucha por reconciliar su herencia kryptoniana con su crianza humana en Smallville como Clark Kent. Mientras protege a la humanidad, encarna la verdad, la justicia y el estilo americano, desafiando una era que considera estos valores obsoletos. Reinicio del universo DC en cine bajo la supervision y direccion de James Gunn.</span>
   </a>
 </li>
-<!--FIN-->
-<!-- Mision: Imposible - La sentencia final -->
-<li>
-  <a href="../Peliculas/pelicula3.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
-    <img src="https://image.tmdb.org/t/p/original/haOjJGUV00dKlZaJWgjM1UD1cJV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0">
-    <span class="hidden">Mision: Imposible - La sentencia final 2025</span>
-    <span class="hidden">La Entidad, la IA experimental que se ha convertido en el villano de la historia, sigue activa y cuenta con el apoyo del malvado Gabriel en el mundo de los carnicos. Por suerte, Ethan y su equipo tienen la llave que les podria dar el control de la Entidad, algo que les obligara a arriesgarse para eliminar a esa IA que descansa en el fondo del mar.</span>
-  </a>
-</li>
-<!--FIN-->
-<!-- Como entrenar a tu dragon -->
+<!--FIN--><!-- Como entrenar a tu dragon -->
 <li>
   <a href="../Peliculas/pelicula2.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img src="https://image.tmdb.org/t/p/original/kjQXYc2Abhy3TBgAZGzJRhN1JaV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0">
