Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision: Imposible - Sentencia mortal parte uno -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino Final -->
+<li>
+  <a href="../Peliculas/pelicula775.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6F3MEcGHeMAMxledi7vQfqkZRkc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Destino Final 2000</span>
+    <span class="hidden">Un joven estudiante tiene una premonición al subirse al avión en el que se dispone a ir a París con sus compañeros. Presintiendo que algo grave va a pasar, él y sus amigos desembarcan antes del despegue. Efectivamente, el avión sufre un trágico accidente, y los jóvenes piensan que se han librado de una muerte segura gracias a la premonición de su amigo. Pero el destino no ha sido vencido todavía...</span>
+  </a>
+</li>
+<!--FIN--><!-- Mision: Imposible - Sentencia mortal parte uno -->
 <li>
   <a href="../Peliculas/pelicula774.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
