Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino Final -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino Final 2 -->
+<li>
+  <a href="../Peliculas/pelicula776.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6m4TTnatasZcMi6qE4Hbe9LdJgz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Destino Final 2 2003</span>
+    <span class="hidden">Ha pasado un año desde el accidente del vuelo 180. Ahora, un grupo de jóvenes estudiantes que se dirigen a Florida en las vacaciones de primavera, evitan un mortal accidente de tráfico gracias a las premoniciones de uno de los chicos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Destino Final -->
 <li>
   <a href="../Peliculas/pelicula775.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
