Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino Final 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino Final 3 -->
+<li>
+  <a href="../Peliculas/pelicula777.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3PEVkIBOii1fxQxaQ0iKODGnBUp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Destino Final 3 2006</span>
+    <span class="hidden">Un grupo de jóvenes decide pasar una tarde en un parque de atracciones. Wendy tiene la premonición de un terrible accidente en la montaña rusa y advierte a sus amigos. Solo unos pocos, entre ellos Kevin, le hacen caso y se salvan de la tragedia. Pero una fuerza misteriosa les quiere muertos a toda costa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Destino Final 2 -->
 <li>
   <a href="../Peliculas/pelicula776.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
