--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino Final 3 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino Final 4 -->
+<li>
+  <a href="../Peliculas/pelicula778.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8b1tsUQW8hogJRi6FFHHfO7D1fu.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Destino Final 4 2009</span>
+    <span class="hidden">Nick O’Bannon y unos amigos acuden a un circuito de carreras para presenciar una prueba del Nascar. Durante la carrera, un terrible accidente conlleva desastrosas consecuencias para el estadio. Pero Nick descubre que se trata de sólo una visión de algo que está a punto de suceder, y junto con otras doce personas consigue salir del recinto y escapar de una tragedia segura. Pensando que han burlado a la muerte, el grupo continúa con su vida, pero desafortunadamente para Nick, Lori y sus amigos sólo es el principio, ya que la muerte no deja cabos sueltos, y regresará para llevarse a los supervivientes de una manera brutal.</span>
+  </a>
+</li>
+<!--FIN--><!-- Destino Final 3 -->
 <li>
   <a href="../Peliculas/pelicula777.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
