Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino Final 5 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino final lazos de sangre -->
+<li>
+  <a href="../Peliculas/pelicula780.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/frNkbclQpexf3aUzZrnixF3t5Hw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Destino final lazos de sangre 2025</span>
+    <span class="hidden">Atragantada por una violenta pesadilla recurrente, la estudiante universitaria Stefanie regresa a casa para encontrar a la única persona que podría romper el ciclo y salvar a su familia de la horrible muerte que inevitablemente les espera a todos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Destino Final 5 -->
 <li>
   <a href="../Peliculas/pelicula779.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
