--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/frNkbclQpexf3aUzZrnixF3t5Hw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Destino final lazos de sangre 2025</span>
-    <span class="hidden">Atragantada por una violenta pesadilla recurrente, la estudiante universitaria Stefanie regresa a casa para encontrar a la única persona que podría romper el ciclo y salvar a su familia de la horrible muerte que inevitablemente les espera a todos.</span>
+    <span class="hidden">6 Atragantada por una violenta pesadilla recurrente, la estudiante universitaria Stefanie regresa a casa para encontrar a la única persona que podría romper el ciclo y salvar a su familia de la horrible muerte que inevitablemente les espera a todos.</span>
   </a>
 </li>
 <!--FIN--><!-- Destino Final 5 -->
