Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Destino final lazos de sangre -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 365 dias -->
+<li>
+  <a href="../Peliculas/pelicula781.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jz8T3hrU6GuMqSuQ4Rbd4MJUeaq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">365 días 2020</span>
+    <span class="hidden">Massimo es miembro de la mafia siciliana y Laura es una directora de ventas. Ella no espera que un viaje a Sicilia salve su relación, pero Massimo la secuestrará durante 365 días para que se enamore de él.</span>
+  </a>
+</li>
+<!--FIN--><!-- Destino final lazos de sangre -->
 <li>
   <a href="../Peliculas/pelicula780.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
