--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- 365 dias: Aquel Dia -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- 365 dias mas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula783.html">
+    <img src="https://image.tmdb.org/t/p/original/dvKpJZUxI1Rsgvrl8HHv62CpBBh.jpg" alt="365 días más" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">365 días más</div>
+  <div class="text-xs text-white/70">2022</div>
+</article><!-- 365 dias: Aquel Dia -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula782.html">
     <img src="https://image.tmdb.org/t/p/original/k3J2GdYxhR6U2RfsHZOsmHVKW7m.jpg" alt="365 días: Aquel Día" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
