Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 365 dias: Aquel Dia -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 365 dias mas -->
+<li>
+  <a href="../Peliculas/pelicula783.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dvKpJZUxI1Rsgvrl8HHv62CpBBh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">365 días más 2022</span>
+    <span class="hidden">La relación de Laura y Massimo pende de un hilo mientras intentan superar los problemas de confianza y los celos, mientras que un tenaz Nacho trabaja para separarlos.</span>
+  </a>
+</li>
+<!--FIN--><!-- 365 dias: Aquel Dia -->
 <li>
   <a href="../Peliculas/pelicula782.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
