--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Death Note -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Frozen: Una Aventura Congelada -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula784.html">
+    <img src="https://image.tmdb.org/t/p/original/hAKhrHvzQDUHQP5zd5HFeqF2BCN.jpg" alt="Frozen: Una Aventura Congelada" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Frozen: Una Aventura Congelada</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Death Note -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie90.html">
     <img src="https://image.tmdb.org/t/p/original/chnG4pYo89weaBjXHJWvW68E35B.jpg" alt="Death Note" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
