--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- 365 dias mas -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Frozen: Una Aventura Congelada -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula784.html">
+    <img src="https://image.tmdb.org/t/p/original/hAKhrHvzQDUHQP5zd5HFeqF2BCN.jpg" alt="Frozen: Una Aventura Congelada" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Frozen: Una Aventura Congelada</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- 365 dias mas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula783.html">
     <img src="https://image.tmdb.org/t/p/original/dvKpJZUxI1Rsgvrl8HHv62CpBBh.jpg" alt="365 días más" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
