Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 365 dias mas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Frozen: Una Aventura Congelada -->
+<li>
+  <a href="../Peliculas/pelicula784.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hAKhrHvzQDUHQP5zd5HFeqF2BCN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Frozen: Una Aventura Congelada 2013</span>
+    <span class="hidden">Cuando la recién coronada Reina Elsa accidentalmente usa su poder para convertir cosas en hielo y maldecir su hogar en un invierno infinito, su hermana Anna se une a un hombre de montaña, su juguetón reno y un muñeco de nieve para cambiar las condiciones climáticas.</span>
+  </a>
+</li>
+<!--FIN--><!-- 365 dias mas -->
 <li>
   <a href="../Peliculas/pelicula783.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
