--- a/Plataforma/dccomics/index.html
+++ b/Plataforma/dccomics/index.html
@@ -198,7 +198,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman Azteca: Choque de imperios -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mujer Maravilla -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula785.html">
+    <img src="https://image.tmdb.org/t/p/original/yjzHtHSAPDdRQejnTyFbifX2gef.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mujer Maravilla</div>
+  <div class="text-xs text-white/70">2017</div>
+</article><!-- Batman Azteca: Choque de imperios -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula737.html">
     <img src="https://image.tmdb.org/t/p/original/wpMaI2J3ISYZiaIWNkoA1lVb5LQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
