--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Frozen: Una Aventura Congelada -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mujer Maravilla -->
+<li>
+  <a href="../Peliculas/pelicula785.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/yjzHtHSAPDdRQejnTyFbifX2gef.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mujer Maravilla 2017</span>
+    <span class="hidden">Cuando un piloto se estrella y habla de un conflicto en el mundo exterior, Diana, una guerrera amazónica en entrenamiento, sale de su casa para luchar en una guerra, descubriendo sus plenos poderes y su verdadero destino.</span>
+  </a>
+</li>
+<!--FIN--><!-- Frozen: Una Aventura Congelada -->
 <li>
   <a href="../Peliculas/pelicula784.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
