--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/yjzHtHSAPDdRQejnTyFbifX2gef.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mujer Maravilla 2017</span>
-    <span class="hidden">Cuando un piloto se estrella y habla de un conflicto en el mundo exterior, Diana, una guerrera amazónica en entrenamiento, sale de su casa para luchar en una guerra, descubriendo sus plenos poderes y su verdadero destino.</span>
+    <span class="hidden">wonder woman Cuando un piloto se estrella y habla de un conflicto en el mundo exterior, Diana, una guerrera amazónica en entrenamiento, sale de su casa para luchar en una guerra, descubriendo sus plenos poderes y su verdadero destino.</span>
   </a>
 </li>
 <!--FIN--><!-- Frozen: Una Aventura Congelada -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/hAKhrHvzQDUHQP5zd5HFeqF2BCN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Frozen: Una Aventura Congelada 2013</span>
-    <span class="hidden">Cuando la recién coronada Reina Elsa accidentalmente usa su poder para convertir cosas en hielo y maldecir su hogar en un invierno infinito, su hermana Anna se une a un hombre de montaña, su juguetón reno y un muñeco de nieve para cambiar las condiciones climáticas.</span>
+    <span class="hidden"> 1 Cuando la recién coronada Reina Elsa accidentalmente usa su poder para convertir cosas en hielo y maldecir su hogar en un invierno infinito, su hermana Anna se une a un hombre de montaña, su juguetón reno y un muñeco de nieve para cambiar las condiciones climáticas.</span>
   </a>
 </li>
 <!--FIN--><!-- 365 dias mas -->
