--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El padel es nuestro -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Maravilloso desastre -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula786.html">
+    <img src="https://image.tmdb.org/t/p/original/6OD0yBusMHXSQDdVFSrTlcFc3PO.jpg" alt="Maravilloso desastre" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Maravilloso desastre</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- El padel es nuestro -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula767.html">
     <img src="https://image.tmdb.org/t/p/original/6KFOfT40Kh0SJEEq1tuuowPEXG9.jpg" alt="El pádel es nuestro" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
