--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mujer Maravilla -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Maravilloso desastre -->
+<li>
+  <a href="../Peliculas/pelicula786.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6OD0yBusMHXSQDdVFSrTlcFc3PO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Maravilloso desastre 2023</span>
+    <span class="hidden">Travis Maddox (Dylan Sprouse), sexy, musculoso y cubierto de tatuajes, es justamente lo que la sobresaliente estudiante universitaria Abby (Virginia Gardner) quiere y necesita… evitar.  Él dedica sus noches peleando en combates clandestinos de boxeo, y durante el día es el máximo galán del campus universitario.  Intrigado por la resistencia de Abby a sus encantos, Travis le propone una simple apuesta: si pierde su próxima pelea, debe permanecer libre de sexo durante un mes. Si gana, Abby debe vivir en su apartamento por la misma cantidad de tiempo…  Ninguno de los dos sabe qué sucederá pero sus destinos ya están en juego.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mujer Maravilla -->
 <li>
   <a href="../Peliculas/pelicula785.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
