--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mujer Maravilla -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Despues de la Tierra -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula787.html">
+    <img src="https://image.tmdb.org/t/p/original/r09otLCM8855OXAn2dXHzMWcGR2.jpg" alt="Después de la Tierra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Después de la Tierra</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Mujer Maravilla -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula785.html">
     <img src="https://image.tmdb.org/t/p/original/yjzHtHSAPDdRQejnTyFbifX2gef.jpg" alt="Mujer Maravilla" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
