--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Despues de la Tierra -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gladiador -->
+<li>
+  <a href="../Peliculas/pelicula788.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/90QFOG5zSN4cbrIVs4DL4ePAuA5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Gladiador 2000</span>
+    <span class="hidden">En el año 180, el Imperio Romano domina todo el mundo conocido. Tras una gran victoria sobre los bárbaros del norte, el anciano emperador Marco Aurelio decide transferir el poder a Máximo, bravo general de sus ejércitos y hombre de inquebrantable lealtad al imperio. Pero su hijo Cómodo, que aspiraba al trono, no lo acepta y trata de asesinar a Máximo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Despues de la Tierra -->
 <li>
   <a href="../Peliculas/pelicula787.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
