--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Gladiador -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Gladiador II -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula789.html">
+    <img src="https://image.tmdb.org/t/p/original/fbcs5AxrdXwyj1b8bGGMgC9kXrM.jpg" alt="Gladiador II" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Gladiador II</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Gladiador -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula788.html">
     <img src="https://image.tmdb.org/t/p/original/90QFOG5zSN4cbrIVs4DL4ePAuA5.jpg" alt="Gladiador" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
