--- a/Plataforma/paramount/index.html
+++ b/Plataforma/paramount/index.html
@@ -219,7 +219,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mision: Imposible - Sentencia mortal parte uno -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Gladiador II -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula789.html">
+    <img src="https://image.tmdb.org/t/p/original/fbcs5AxrdXwyj1b8bGGMgC9kXrM.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Gladiador II</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Mision: Imposible - Sentencia mortal parte uno -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula774.html">
     <img src="https://image.tmdb.org/t/p/original/83sGKvCv2T2CulYbd40Aeduc7n2.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
