--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gladiador -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gladiador II -->
+<li>
+  <a href="../Peliculas/pelicula789.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fbcs5AxrdXwyj1b8bGGMgC9kXrM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Gladiador II 2024</span>
+    <span class="hidden">Años después de presenciar la muerte del venerado héroe Maximus a manos de su tío, Lucius se ve obligado a ingresar al Coliseo después de que su hogar fuera conquistado por los emperadores tiránicos que ahora dirigen Roma con mano de hierro. Con rabia en su corazón y el futuro del Imperio en juego, Lucius debe mirar a su pasado para encontrar fuerza y ​​honor para devolver la gloria de Roma a su pueblo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Gladiador -->
 <li>
   <a href="../Peliculas/pelicula788.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
