--- a/Categorias/cienciaficcion/index.html
+++ b/Categorias/cienciaficcion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Despues de la Tierra -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Appleseed Alpha -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula790.html">
+    <img src="https://image.tmdb.org/t/p/original/be1Oa4JihT875bPJpv7QaWvYiYt.jpg" alt="Appleseed Alpha" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Appleseed Alpha</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Despues de la Tierra -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula787.html">
     <img src="https://image.tmdb.org/t/p/original/r09otLCM8855OXAn2dXHzMWcGR2.jpg" alt="Después de la Tierra" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
