Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Appleseed Alpha -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Pinguinos de Madagascar -->
+<li>
+  <a href="../Peliculas/pelicula791.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lEnUxCpQUyntm2eLBzCTv3bfplV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Pingüinos de Madagascar 2014</span>
+    <span class="hidden">Spin-off de 'Madagascar' protagonizado por los pingüinos de la isla. Las más divertidas aves encubiertas del mundo del espionaje: Capitán, Kowalski, Rico y Soldado. Son la élite de la élite y juntos unen sus fuerzas a una elegante organización encubierta llamada Viento Norte, liderada por el apuesto y musculoso Agente Clasificado. Entre todos deben evitar que el villano Dr. Octavio Salitre destruya el mundo tal y como lo conocemos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Appleseed Alpha -->
 <li>
   <a href="../Peliculas/pelicula790.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
