Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Pinguinos de Madagascar -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Madagascar -->
+<li>
+  <a href="../Peliculas/pelicula792.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zrV5GnfCcLWzyjrFgYTpjQPRMfl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Madagascar 2005</span>
+    <span class="hidden">Cuatro amigos animales prueban la vida salvaje cuando, luego de escapar de su cautiverio en el zoológico de Central Park, van a parar a la orilla de la isla de Madagascar.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Pinguinos de Madagascar -->
 <li>
   <a href="../Peliculas/pelicula791.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
