Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Madagascar -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Madagascar 2: Escape de Africa -->
+<li>
+  <a href="../Peliculas/pelicula793.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zYbvSjajQrb2jU9rUo5Mt06stPd.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Madagascar 2: Escape de África 2008</span>
+    <span class="hidden">El león Alex, la cebra Marty, la jirafa Melman y la hipopótamo Gloria permanecen en Madagascar a la espera de regresar a su zoológico. En su empeño por volver a casa, arreglan un viejo aeroplano, que les hará llegar hasta las inmensas llanuras africanas.</span>
+  </a>
+</li>
+<!--FIN--><!-- Madagascar -->
 <li>
   <a href="../Peliculas/pelicula792.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
