Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Madagascar 2: Escape de Africa -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Madagascar 3: Los Fugitivos -->
+<li>
+  <a href="../Peliculas/pelicula794.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8fKTIecTVNURB6CRFjYMypggRL2.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Madagascar 3: Los Fugitivos 2012</span>
+    <span class="hidden">Alex el león, Marty la cebra, Melman la jirafa y Gloria la hipopótamo están decididos a regresar como sea al Zoológico de Central Park en Nueva York. Tras abandonar África, toman un desvío y emergen, literalmente, en Europa, persiguiendo a los pingüinos y chimpancés que se las han arreglado para hacer saltar la banca de un casino de Monte Carlo. Pronto, los animales son descubiertos por la capitana Chantel DuBois, una testaruda francesa encargada del control de animales, y a la que no le gusta nada que unos animales del zoológico anden sueltos por su ciudad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Madagascar 2: Escape de Africa -->
 <li>
   <a href="../Peliculas/pelicula793.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
