--- a/Peliculas/pelicula11.html
+++ b/Peliculas/pelicula11.html
@@ -156,13 +156,13 @@
   <a href="javascript:window.history.back();" class="flex flex-col items-center space-y-1">
     <i class="fas fa-arrow-left text-xl"></i><span>Regresar</span>
   </a>
-  <a href="https://lzrdrz10.github.io/sv/Categorias/movie/index.html" class="flex flex-col items-center space-y-1">
+  <a href="../Categorias/movie/index.html" class="flex flex-col items-center space-y-1">
     <i class="fas fa-film text-xl"></i><span>Movies</span>
   </a>
-  <a href="https://lzrdrz10.github.io/sv/Categorias/serie/index.html" class="flex flex-col items-center space-y-1">
+  <a href="../Categorias/serie/index.html" class="flex flex-col items-center space-y-1">
     <i class="fas fa-tv text-xl"></i><span>Series</span>
   </a>
-  <a href="https://lzrdrz10.github.io/sv/SEARCH/index.html" class="flex flex-col items-center space-y-1">
+  <a href="../SEARCH/index.html" class="flex flex-col items-center space-y-1">
     <i class="fas fa-search text-xl"></i><span>Buscar</span>
   </a>
 </nav>
