Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Madagascar 3: Los Fugitivos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Wallace y Gromit: La venganza se sirve con plumas -->
+<li>
+  <a href="../Peliculas/pelicula795.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/e4YIxQEoz2lwZA3WLtFzAogxl44.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Wallace y Gromit: La venganza se sirve con plumas 2024</span>
+    <span class="hidden">Gromit está preocupado por el hecho de que Wallace se haya vuelto demasiado dependiente de sus inventos, lo que resulta justificado cuando Wallace inventa un "gnomo inteligente" que parece desarrollar una mente propia. A medida que los acontecimientos se descontrolan, Gromit tiene que dejar de lado sus reparos y luchar contra fuerzas siniestras... o Wallace no podrá volver a inventar nunca más.</span>
+  </a>
+</li>
+<!--FIN--><!-- Madagascar 3: Los Fugitivos -->
 <li>
   <a href="../Peliculas/pelicula794.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
