Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Wallace y Gromit: La venganza se sirve con plumas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Wallace & Gromit: Los Pantalones Equivocados -->
+<li>
+  <a href="../Peliculas/pelicula796.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/97YLmWqBoUEbdi6mpPduQTsm7MF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Wallace & Gromit: Los Pantalones Equivocados 1993</span>
+    <span class="hidden">En esta nueva aventura, Wallace le regala unos modernos pantalones a Gromit que le acabarán saliendo más caros de lo que esperaba después de conocer al huesped al que hospedarán en su casa, un aparentemente inocente pingüino...</span>
+  </a>
+</li>
+<!--FIN--><!-- Wallace y Gromit: La venganza se sirve con plumas -->
 <li>
   <a href="../Peliculas/pelicula795.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
