Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Wallace & Gromit: Los Pantalones Equivocados -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cars -->
+<li>
+  <a href="../Peliculas/pelicula797.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lgBe9KD6DoLyQP28JZ6fSUGK8j0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cars 2006</span>
+    <span class="hidden">El aspirante campeón de carreras, Rayo McQueen, parece que está a punto de conseguir el éxito, la fama y todo lo que había soñado. Sin embargo, Rayo cometió el error de desviar su destino y terminó llegando a un pequeño pueblo olvidado de la Ruta 66.</span>
+  </a>
+</li>
+<!--FIN--><!-- Wallace & Gromit: Los Pantalones Equivocados -->
 <li>
   <a href="../Peliculas/pelicula796.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
