Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cars -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cars 2 -->
+<li>
+  <a href="../Peliculas/pelicula798.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/eQo1LQs5Vo9RHVHYUhNSfMZa3VB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cars 2 2011</span>
+    <span class="hidden">El coche de carreras de estrellas Lightning McQueen y su amigo mater en el extranjero para competir en la carrera del Gran Premio Mundial. Pero el camino al campeonato se vuelve rocoso cuando Mater se ve atrapado en una intrigante aventura propia: el espionaje internacional.</span>
+  </a>
+</li>
+<!--FIN--><!-- Cars -->
 <li>
   <a href="../Peliculas/pelicula797.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
