Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Cars 3 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Bella y La Bestia -->
+<li>
+  <a href="../Peliculas/pelicula800.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2q38CCkPvhm8DVHazY9QLQtHQoO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Bella y La Bestia 2017</span>
+    <span class="hidden">Una joven soñadora y romántica llamada Bella, vive en una pequeña aldea junto a su padre, un inventor de artilugios, al que algunos consideran un anciano demente.Un día su padre se marcha a una feria para exponer sus inventos, pero se pierde en el camino y acaba en un grande y viejo castillo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Cars 3 -->
 <li>
   <a href="../Peliculas/pelicula799.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
