Crear/Actualizar Categorias/romance/index.html

--- a/Categorias/romance/index.html
+++ b/Categorias/romance/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- La Bella y La Bestia -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Juego de gemelas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula801.html">
+    <img src="https://image.tmdb.org/t/p/original/3JyIUavN6byTNKjWXupCCvRljRF.jpg" alt="Juego de gemelas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Juego de gemelas</div>
+  <div class="text-xs text-white/70">1998</div>
+</article><!-- La Bella y La Bestia -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula800.html">
     <img src="https://image.tmdb.org/t/p/original/2q38CCkPvhm8DVHazY9QLQtHQoO.jpg" alt="La Bella y La Bestia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
