Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Bella y La Bestia -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Juego de gemelas -->
+<li>
+  <a href="../Peliculas/pelicula801.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3JyIUavN6byTNKjWXupCCvRljRF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Juego de gemelas 1998</span>
+    <span class="hidden">Las gemelas idénticas Annie y Hallie, separadas al nacer y cada una criada por uno de sus padres biológicos, se descubren más tarde por primera vez en un campamento de verano y hacen un plan para volver a reunir a sus padres descarriados.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Bella y La Bestia -->
 <li>
   <a href="../Peliculas/pelicula800.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
