Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Juego de gemelas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Marvel Zombies -->
+<li>
+  <a href="../Series/serie92.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/4WOpUjQPZCb0NmH1CasNNBQ8UHS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Marvel Zombies 2025</span>
+    <span class="hidden">Después de que los Vengadores fueron vencidos por una plaga de zombis, un desesperado grupo de sobrevivientes descubre la clave para llevar a su fin a los súper poderosos no muertos, corriendo a través de un paisaje distópico y arriesgando su vida y sus miembros para salvar al mundo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Juego de gemelas -->
 <li>
   <a href="../Peliculas/pelicula801.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
