Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Fuera de mi -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tres Metros Sobre El Cielo -->
+<li>
+  <a href="../Peliculas/pelicula803.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nNoMfNPnvEzGADXDkP6eJAP81KB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tres Metros Sobre El Cielo 2010</span>
+    <span class="hidden">Historia de dos jóvenes que pertenecen a mundos diferentes. Es la crónica de un amor improbable, casi imposible pero inevitable arrastrando en un viaje frenético descubren el primer gran amor. Babi (Maria Valverde) es una chica de clase media alta que se educa en la bondad y la inocencia. Hache (Mario Casas) es un niño rebelde, impulsivo, inconsciente, tiene un apetito de riesgo y peligro encarnado en peleas interminables y carreras ilegales de motos, el límite del sentido común</span>
+  </a>
+</li>
+<!--FIN--><!-- Fuera de mi -->
 <li>
   <a href="../Peliculas/pelicula802.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
